Создал методы для считывания